# flightrouteoptimizer

./: .gitignore  CMakeLists.txt  requirements.txt
Settings/: config.json
datasets/: airports.json
gui/: app.py  app2.py
include/: Airport.h  Edge.h  Graph.h  utility_functions.h
scripts/: fetchAirportData.py
src/: Airport.cpp  FlightPathOptimizer.cpp  Graph.cpp  utility_functions.cpp
